--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "tsc:watch": "tsc --noEmit --watch"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.6.0",
     "highlight.js": "^11.9.0",
     "next": "14.2.3",
     "react": "^18",
@@ -27,6 +28,6 @@
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.4.5"
   }
 }
