--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
+    "firebase": "^10.12.2",
     "highlight.js": "^11.9.0",
     "next": "14.2.3",
     "react": "^18",
