--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "firebase deploy",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "tsc:watch": "tsc --noEmit --watch"
