--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^10.12.2",
     "highlight.js": "^11.9.0",
     "next": "14.2.3",
+    "prettier-plugin-tailwindcss": "^0.6.1",
     "react": "^18",
     "react-dom": "^18",
     "zod": "^3.23.8",
