--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "daisyui": "^4.11.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "firebase-tools": "^13.11.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.5"
